--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -372,9 +372,63 @@ Control randomization
 
 ## Introduction to ConvNet && Convnet in TensorFlow && Convolutional Neural Networks
 
+Convolutional networks are tailor-made for computer vision tasks.
 
+They exploit:
 
+1. Hierarchical nature of features
+2. Translation invariance of features
 
+"Understanding" what a convnet learns is non-trivial, but some clever approaches exist.
+
+TFRecord:
+
+1. The recommended format for TensorFlow
+2. Binary file format (a serialized tf.train.Example protobuf object)
+3. make better use of disk cache
+4. faster to move around
+5. can handle data of different types
+
+Convert to TFRecord format
+
+    # Step 1: create a writer to write tfrecord to that file
+    writer = tf.python_io.TFRecordWriter(out_file)
+
+    # Step 2: get serialized shape and values of the image
+    shape, binary_image = get_image_binary(image_file)
+
+    # Step 3: create a tf.train.Features object
+    features = tf.train.Features(feature={'label': _int64_feature(label),
+                                          'shape': _bytes_feature(shape),
+                                          'image': _bytes_feature(binary_image)})
+
+    # Step 4: create a sample containing of features defined above
+    sample = tf.train.Example(features=features)
+
+    # Step 5: write the sample to the tfrecord file
+    writer.write(sample.SerializeToString())
+    writer.close()
+    
+    
+    def _int64_feature(value):
+        return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))
+
+    def _bytes_feature(value):
+        return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))
+        
+Read TFRecord
+
+    dataset = tf.data.TFRecordDataset(tfrecord_files)
+    dataset = dataset.map(_parse_function)
+
+    def _parse_function(tfrecord_serialized):
+        features={'label': tf.FixedLenFeature([], tf.int64),
+                  'shape': tf.FixedLenFeature([], tf.string),
+                  'image': tf.FixedLenFeature([], tf.string)}
+
+        parsed_features = tf.parse_single_example(tfrecord_serialized, features)
+
+        return parsed_features['label'], parsed_features['shape'], parsed_features['image']
 
 
 
