--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -430,13 +430,54 @@ Read TFRecord
 
         return parsed_features['label'], parsed_features['shape'], parsed_features['image']
 
+## Variational Auto-Encoders
 
+    
 
+## Recurrent Neural Networks 
 
+Construct Cells
+    
+    cell = tf.nn.rnn_cell.GRUCell(hidden_size)
+    
+Stack Multiple Cells
+    
+    layers = [tf.nn.rnn_cell.GRUCell(size) for size in hidden_sizes]
+    cells = tf.nn.rnn_cell.MultiRNNCell(layers)
+    output, out_state = tf.nn.dynamic_rnn(cell, seq, length, initial_state)
+    
+Dealing with variable sequence length
 
+    # Approach 1:
+    # Maintain a mask (True for real, False for padded tokens)
+    
+    full_loss = tf.nn.softmax_cross_entropy_with_logits(preds, labels)
+    loss = tf.reduce_mean(tf.boolean_mask(full_loss, mask))
+    
+    
+    # Approach 2: 
+    # Let your model know the real sequence length so it only predict the labels for the real tokens
+    
+    cell = tf.nn.rnn_cell.GRUCell(hidden_size)
+    rnn_cells = tf.nn.rnn_cell.MultiRNNCell([cell] * num_layers)
+    tf.reduce_sum(tf.reduce_max(tf.sign(seq), 2), 1)
+    output, out_state = tf.nn.dynamic_rnn(cell, seq, length, initial_state)
+    
+Clip gradients with tf.clip_by_global_norm
 
+    gradients = tf.gradients(cost, tf.trainable_variables())
+    # take gradients of cost w.r.t. all trainable variables
 
+    clipped_gradients, _ = tf.clip_by_global_norm(gradients, max_grad_norm)
+    # clip the gradients by a pre-defined max norm 
 
+    optimizer = tf.train.AdamOptimizer(learning_rate)
+    train_op = optimizer.apply_gradients(zip(gradients, trainables))
+    # add the clipped gradients to the optimizer
+    
+## Seq2seq with Attention 
+
+## Beyond RNNs: Transformer, Tensor2Tensor
 
 
 
