--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -475,7 +475,28 @@ Clip gradients with tf.clip_by_global_norm
     train_op = optimizer.apply_gradients(zip(gradients, trainables))
     # add the clipped gradients to the optimizer
     
+
 ## Seq2seq with Attention 
+
+Beam search: On each step of decoder, keep track of the k most probable partial translations
+
+1. k is the beam size (in practice around 5 to 10)
+2. Not guaranteed to find optimal solution
+3. But much more efficient
+
+BLEU (Bilingual Evaluation Understudy): BLEU compares the machine-written translation to one or several human-written translation(s), and computes a similarity score based on:
+
+1. n-gram precision (usually up to 3 or 4-grams)
+2. Penalty for too-short system translations
+
+BLEU is useful but imperfect:
+
+1. There are many valid ways to translate a sentence
+2. So a good translation can get a poor BLEU score because it has low n-gram overlap with the human translation
+
+Attention: it provides a solution to the bottleneck problem
+
+core idea: on each step of the decoder, focus on a particular part of the source sequence
 
 ## Beyond RNNs: Transformer, Tensor2Tensor
 
