--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -500,13 +500,5 @@ core idea: on each step of the decoder, focus on a particular part of the source
 
 ## Beyond RNNs: Transformer, Tensor2Tensor
 
-
-
-
-
-
-
-
-
-
+## Dialogue Agents
 
