--- a/_posts/2019-04-01-blog-post-1.md
+++ b/_posts/2019-04-01-blog-post-1.md
@@ -12,8 +12,33 @@ tags:
 [Neural Networks and Deep Learning](https://www.coursera.org/learn/neural-networks-deep-learning) by deeplearning.ai on Coursera.
 
 <div  align="center">
-<img src='/images/C_1.png'>
+<img src='/images/DL_1.png'>
 </div>
 
 <br>
+
+[Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization](https://www.coursera.org/learn/deep-neural-network) by deeplearning.ai on Coursera.
+
+<div  align="center">
+<img src='/images/DL_2.png'>
+</div>
+
+<br>
+
+[Structuring Machine Learning Projects](https://www.coursera.org/learn/machine-learning-projects) by deeplearning.ai on Coursera.
+
+<div  align="center">
+<img src='/images/DL_3.png'>
+</div>
+
+<br>
+
+[Convolutional Neural Networks](https://www.coursera.org/learn/convolutional-neural-networks) by deeplearning.ai on Coursera.
+
+<div  align="center">
+<img src='/images/DL_4.png'>
+</div>
+
+<br>
+
 
