--- a/_posts/2019-04-01-blog-post-1.md
+++ b/_posts/2019-04-01-blog-post-1.md
@@ -9,6 +9,12 @@ tags:
   - RNN
 ---
 
+<div  align="center">
+<img src='/images/DL_0.png'>
+</div>
+
+<br>
+
 [Neural Networks and Deep Learning](https://www.coursera.org/learn/neural-networks-deep-learning) by deeplearning.ai on Coursera.
 
 <div  align="center">
@@ -41,4 +47,8 @@ tags:
 
 <br>
 
+[Sequence Models](https://www.coursera.org/learn/nlp-sequence-models) by deeplearning.ai on Coursera.
 
+<div  align="center">
+<img src='/images/DL_5.png'>
+</div>
