--- a/_posts/2019-04-01-blog-post-1.md
+++ b/_posts/2019-04-01-blog-post-1.md
@@ -9,6 +9,8 @@ tags:
   - RNN
 ---
 
+[Deep Learning Specialization](https://www.deeplearning.ai/deep-learning-specialization/) by deeplearning.ai on Coursera.
+
 <div  align="center">
 <img src='/images/DL_0.png'>
 </div>
