--- a/_posts/2019-04-13-blog-post-2.md
+++ b/_posts/2019-04-13-blog-post-2.md
@@ -13,3 +13,14 @@ tags:
 
 Not about Learning aspect of Deep Learning (except for the first two); System aspect of deep learning: faster training, efficient serving, lower memory consumption.
 
+<br>
+
+[Lecture 2: Components Overview of Deep Learning System](http://dlsys.cs.washington.edu/pdf/lecture3.pdf)
+
+Typical Deep Learning System Stack
+
+User API: Programming API; Gradient Calculation (Differentiation API)
+
+System Components: Computational Graph Optimization and Execution; Runtime Parallel Scheduling
+
+Architecture: GPU Kernels, Optimizing Device Code; Accelerators and Hardwares
