--- a/_posts/2019-04-13-blog-post-2.md
+++ b/_posts/2019-04-13-blog-post-2.md
@@ -13,7 +13,7 @@ tags:
 
 Not about Learning aspect of Deep Learning (except for the first two); System aspect of deep learning: faster training, efficient serving, lower memory consumption.
 
-[Lecture 2: Components Overview of Deep Learning System](http://dlsys.cs.washington.edu/pdf/lecture3.pdf)
+[Lecture 3: Components Overview of Deep Learning System](http://dlsys.cs.washington.edu/pdf/lecture3.pdf)
 
 Typical Deep Learning System Stack
 
@@ -22,3 +22,19 @@ User API: Programming API; Gradient Calculation (Differentiation API)
 System Components: Computational Graph Optimization and Execution; Runtime Parallel Scheduling
 
 Architecture: GPU Kernels, Optimizing Device Code; Accelerators and Hardwares
+
+[Lecture 4: Backprop and Automatic Differentiation](http://dlsys.cs.washington.edu/pdf/lecture4.pdf)
+
+Numerical differentiation
+
+* Tool to check the correctness of implementation
+
+Backpropagation
+
+* Easy to understand and implement
+* Bad for memory use and schedule optimization
+
+Automatic differentiation
+
+* Generate gradient computation to entire computation graph
+* Better for system optimization
