--- a/_posts/2018-06-10-blog-post-1.md
+++ b/_posts/2018-06-10-blog-post-1.md
@@ -7,7 +7,7 @@ tags:
   - Optimization
 ---
 
-###Batch Norm at train time
+##Batch Norm at train time
 
 $\mu = \frac{1}{m}\sum_iz^{(i)}$
 
@@ -17,7 +17,7 @@ $z_{norm}^{(i)} = \frac{z^{(i)} - \mu}{\sqrt{\sigma^2 + \epsilon}}$
 
 $\bar{z}^{(i)} = \gamma z_{norm}^{(i)} + \beta$
 
-###Batch Norm at test time
+##Batch Norm at test time
 
 $\mu$, $\sigma$: estimate using exponentially weighted average (accross mini-batch in training procedure)
 
