--- a/_posts/2019-04-13-blog-post-2.md
+++ b/_posts/2019-04-13-blog-post-2.md
@@ -38,3 +38,16 @@ Automatic differentiation
 
 * Generate gradient computation to entire computation graph
 * Better for system optimization
+
+[Lecture 5: Hardware backends: GPU](http://dlsys.cs.washington.edu/pdf/lecture5.pdf)
+
+Tips for high performance
+
+* Use existing libraries, which are highly optimized, e.g. cublas, cudnn.
+* Use nvprof or nvvp (visual profiler) to debug the performance.
+* Use high level language to write GPU kernels.
+
+
+
+
+
