--- a/_posts/2019-04-13-blog-post-2.md
+++ b/_posts/2019-04-13-blog-post-2.md
@@ -7,7 +7,7 @@ tags:
   - Deep Learning
 ---
 
-[CSE 599W: Systems for ML]() by Tianqi Chen, Haichen Shen, and Arvind Krishnamurthy at University of Washington.
+[CSE 599W: Systems for ML](http://dlsys.cs.washington.edu/) by Tianqi Chen, Haichen Shen, and Arvind Krishnamurthy at University of Washington.
 
 [Lecture 1: Introduction to Deep Learning](http://dlsys.cs.washington.edu/pdf/lecture1.pdf)
 
@@ -47,7 +47,13 @@ Tips for high performance
 * Use nvprof or nvvp (visual profiler) to debug the performance.
 * Use high level language to write GPU kernels.
 
+[Lecture 6: Optimize for hardware backends](http://dlsys.cs.washington.edu/pdf/lecture6.pdf)
 
+Optimizations = Too Many Variant of Operators
 
+* Different tiling patterns
+* Different fuse patterns
+* Different data layout
+* Different hardware backends
 
 
