--- a/files/resume_en/resume_en.tex
+++ b/files/resume_en/resume_en.tex
@@ -267,9 +267,9 @@ Philadelphia, PA
 \textbf{Petuum, Inc.}\\
 Supervisor: Dr. Tong Wen and Zhiting Hu
 \item Designed and implemented the machine learning library (based on TensorFlow, DyNet, and LightGBM) for Petuum AI Builder Platform.
-\item Designed and developed Texar-PyTorch (https://github.com/asyml/texar-pytorch, gaining over 510 stars), an open-source machine learning and text generation toolkit based on PyTorch. 
+\item Designed and developed Texar-PyTorch (https://github.com/asyml/texar-pytorch, gaining over 520 stars), an open-source machine learning and text generation toolkit based on PyTorch. 
 \item Designed and developed Forte (https://github.com/asyml/forte), a flexible composable system designed for text processing, providing integrated architecture support for a wide spectrum of tasks, from Information Retrieval to tasks in Natural Language Processing (including text analysis and language generation).
-\item Maintained and contributed to Texar-TensorFlow (https://github.com/asyml/texar, gaining over 1790 stars), an open-source machine learning and text generation toolkit based on TensorFlow.
+\item Maintained and contributed to Texar-TensorFlow (https://github.com/asyml/texar, gaining over 1820 stars), an open-source machine learning and text generation toolkit based on TensorFlow.
 \end{innerlist}
 
 \
@@ -325,6 +325,8 @@ IEEE Power \& Energy Society General Meeting \hfill 2014
 \section{Conference Publications}
 \vspace{-.1275in}
 \begin{bibsection}
+	
+\item \href{}{Z. Liu, A. Bukkittu, M. Gupta, {\bf P. Gao}, S. Singhavi, A. Ahmed, W. Wei, Z. Hu, H. Shi, E. Xing and Z. Hu. ``Forte: Composing Diverse NLP toolsFor TextRetrieval, Analysis and Generation.'' \emph{submitted to 2020 Annual Conference of the Association for Computational Linguistics (ACL)}, 2020.}
 	
 \item \href{}{M. Wang, J. H. Chow, Y. Hao, S. Zhang, W. Li, R. Wang, {\bf P. Gao}, C. Lackner, E. Farantatos, and M. Patel. ``A Low-rank Framework of PMU Data Recovery and Event Identification.'' \emph{Proc. of the First IEEE International Conference on Smart Grid Synchronized Measurements and Analytics (SGSMA)}, College Station, Texas, May, 2019.}
 
