--- a/_posts/2018-09-12-blog-post-1.md
+++ b/_posts/2018-09-12-blog-post-1.md
@@ -502,3 +502,7 @@ core idea: on each step of the decoder, focus on a particular part of the source
 
 ## Dialogue Agents
 
+## Reinforcement Learning in Tensorflow
+
+## Keras
+
