--- a/files/resume_en/resume_en.tex
+++ b/files/resume_en/resume_en.tex
@@ -263,7 +263,7 @@ Philadelphia, PA
 
 \textbf{Data Scientist} \hfill {February 2018 to present}
 \begin{innerlist}
-\item[] Core Machine Learning Team,\\
+\item[] Applied Machine Learning Team,\\
 \textbf{Petuum, Inc.}\\
 Supervisor: Dr. Tong Wen and Zhiting Hu
 \item Designed and implemented the machine learning library (based on TensorFlow, DyNet, and LightGBM) for Petuum AI Builder Platform.
