--- a/files/resume_en/resume_en.tex
+++ b/files/resume_en/resume_en.tex
@@ -261,14 +261,14 @@ Philadelphia, PA
 
 \section{Work Experience}
 
-\textbf{Data Scientist} \hfill {February 2018 to present}
+\textbf{Data Scientist / Machine Learning Engineer} \hfill {February 2018 to April 2020}
 \begin{innerlist}
 \item[] Applied Machine Learning Team,\\
 \textbf{Petuum, Inc.}\\
 Supervisor: Dr. Tong Wen and Zhiting Hu
 \item Designed and implemented the machine learning library (based on TensorFlow, DyNet, and LightGBM) for Petuum AI Builder Platform.
-\item Designed and developed Texar-PyTorch (https://github.com/asyml/texar-pytorch, gaining over 545 stars), an open-source machine learning and text generation toolkit based on PyTorch. 
-\item Maintained and contributed to Texar-TensorFlow (https://github.com/asyml/texar, gaining over 1880 stars), an open-source machine learning and text generation toolkit based on TensorFlow.
+\item Designed and developed Texar-PyTorch (https://github.com/asyml/texar-pytorch, gaining over 580 stars), an open-source machine learning and text generation toolkit based on PyTorch. 
+\item Maintained and contributed to Texar-TensorFlow (https://github.com/asyml/texar, gaining over 1950 stars), an open-source machine learning and text generation toolkit based on TensorFlow.
 \item Designed and developed Forte (https://github.com/asyml/forte), a toolkit for building natural language processing pipelines, featuring cross-task interaction, adaptable data-model interfaces and many more.
 \end{innerlist}
 
@@ -326,7 +326,7 @@ IEEE Power \& Energy Society General Meeting \hfill 2014
 \vspace{-.1275in}
 \begin{bibsection}
 	
-\item \href{}{Z. Liu, A. Bukkittu, M. Gupta, {\bf P. Gao}, S. Singhavi, A. Ahmed, W. Wei, Z. Hu, H. Shi, E. Xing and Z. Hu. ``Forte: Composing Diverse NLP tools For Text Retrieval, Analysis and Generation.'' \emph{submitted to 2020 Annual Conference of the Association for Computational Linguistics (ACL)}, 2020.}
+\item \href{}{Z. Liu, A. Bukkittu, M. Gupta, {\bf P. Gao}, S. Singhavi, A. Ahmed, W. Wei, Z. Hu, H. Shi, E. Xing and Z. Hu. ``Forte: Composing Diverse NLP tools For Text Retrieval, Analysis and Generation.'' \emph{submitted to  2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)}, 2020.}
 	
 \item \href{}{M. Wang, J. H. Chow, Y. Hao, S. Zhang, W. Li, R. Wang, {\bf P. Gao}, C. Lackner, E. Farantatos, and M. Patel. ``A Low-rank Framework of PMU Data Recovery and Event Identification.'' \emph{Proc. of the First IEEE International Conference on Smart Grid Synchronized Measurements and Analytics (SGSMA)}, College Station, Texas, May, 2019.}
 
@@ -451,6 +451,7 @@ Distributed Systems and Sensor Networks, Fall 2017.
 \item Program Committee Member: \\
 Conference on Uncertainty in Artificial Intelligence (UAI) 2018.
 \item Reviewer: \\
+IEEE Transactions on Signal Processing, \\
 IEEE Transactions on Smart Grid, \\
 IEEE Transactions on Automatic Control, \\
 IEEE/ACM Transactions on Networking, \\
