--- a/files/resume_en/resume_en.tex
+++ b/files/resume_en/resume_en.tex
@@ -261,7 +261,7 @@ Philadelphia, PA
 
 \section{Work Experience}
 
-\textbf{Data Scientist / Machine Learning Engineer} \hfill {February 2018 to April 2020}
+\textbf{Data Scientist / Machine Learning Engineer} \hfill {February 2018 to present}
 \begin{innerlist}
 \item[] Applied Machine Learning Team,\\
 \textbf{Petuum, Inc.}\\
